--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         document.addEventListener("DOMContentLoaded", start);
 
         // URL til landingpage (forsiden)
-        var url = "https://schjoldby.dk/kea/10_eksamensprojekt/hauli/wordpress/wp-json/wp/v2/pages?slug=landingpage";
+        var url = "https://evakjar.dk/kea/10_hauli/wordpress/wp-json/wp/v2/pages?slug=landingpage";
 
         // Splashbillede
         let splash = document.querySelector(".css_splash");
