category boks klar til billeder, grid og filter flexer

--- a/alle-produkter.html
+++ b/alle-produkter.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="">
 
     <link rel="stylesheet" href="CSS/global.css">
-    <link rel="stylesheet" href="CSS/slider.css">
+    <!--    <link rel="stylesheet" href="CSS/slider.css">-->
     <link rel="stylesheet" href="CSS/alle-produkter.css">
 
 
@@ -82,82 +82,86 @@
 
 
     <main class="u-margin-bottom">
-        <section class="about_content">
-            <div class="container js-category-box u-margin-bottom"></div>
+        <div class="about_content">
 
-            <section class="category-slider u-margin-bottom">
-                <div class="category-list-container">
-                    <ul class="category-list">
+            <section class=" js-category-box u-margin-bottom"></section>
 
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=alle-produkter" class="category-list__link js-category-button" data-category="alle-produkter">
-                                <div class="category-list__icon-container">
-                                    <img src="img/alle-produkter.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Alle produkter</h3>
-                            </a>
-                        </li>
+            <div class="vertical-menu-mover">
+                <section class="container category-slider u-margin-bottom">
+                    <div class="category-list-container">
+                        <ul class="category-list">
 
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=tasker" class="category-list__link js-category-button" data-category="tasker">
-                                <div class="category-list__icon-container">
-                                    <img src="img/taske.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Tasker</h3>
-                            </a>
-                        </li>
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=mundbind" class="category-list__link js-category-button" data-category="mundbind">
-                                <div class="category-list__icon-container">
-                                    <img src="img/mundbind.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Mundbind</h3>
-                            </a>
-                        </li>
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=toj" class="category-list__link js-category-button" data-category="toj">
-                                <div class="category-list__icon-container">
-                                    <img src="img/toj-2.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Tøj</h3>
-                            </a>
-                        </li>
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=overdele" class="category-list__link js-category-button" data-category="overdele">
-                                <div class="category-list__icon-container">
-                                    <img src="img/overdel-2.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Overdele</h3>
-                            </a>
-                        </li>
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=kjoler" class="category-list__link js-category-button" data-category="kjoler">
-                                <div class="category-list__icon-container">
-                                    <img src="img/kjole.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Kjoler</h3>
-                            </a>
-                        </li>
-                        <li class="category-list__item">
-                            <a href="alle-produkter.html?filter=colorblock-collection" class="category-list__link js-category-button" data-category="colorblock-collection">
-                                <div class="category-list__icon-container">
-                                    <img src="img/colorblock-collection.svg" alt="" class="category-list__icon">
-                                </div>
-                                <h3 class="category-list__category-title">Colorblock Kollektion</h3>
-                            </a>
-                        </li>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=alle-produkter" class="category-list__link js-category-button" data-category="alle-produkter">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/alle-produkter.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Alle produkter</h3>
+                                </a>
+                            </li>
 
-                    </ul>
-                </div>
-            </section>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=tasker" class="category-list__link js-category-button" data-category="tasker">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/taske.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Tasker</h3>
+                                </a>
+                            </li>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=mundbind" class="category-list__link js-category-button" data-category="mundbind">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/mundbind.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Mundbind</h3>
+                                </a>
+                            </li>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=toj" class="category-list__link js-category-button" data-category="toj">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/toj-2.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Tøj</h3>
+                                </a>
+                            </li>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=overdele" class="category-list__link js-category-button" data-category="overdele">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/overdel-2.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Overdele</h3>
+                                </a>
+                            </li>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=kjoler" class="category-list__link js-category-button" data-category="kjoler">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/kjole.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Kjoler</h3>
+                                </a>
+                            </li>
+                            <li class="category-list__item">
+                                <a href="alle-produkter.html?filter=colorblock-collection" class="category-list__link js-category-button" data-category="colorblock-collection">
+                                    <div class="category-list__icon-container">
+                                        <img src="img/colorblock-collection.svg" alt="" class="category-list__icon">
+                                    </div>
+                                    <h3 class="category-list__category-title">Colorblock Kollektion</h3>
+                                </a>
+                            </li>
 
-            <section class="products u-margin-bottom">
-                <div class="container_products">
-                    <div class="product-list js-product-list"></div>
-                </div>
-            </section>
+                        </ul>
+                    </div>
+                </section>
 
-        </section>
+                <section class="container products u-margin-bottom">
+                    <div class="container_products">
+                        <div class="product-list js-product-list"></div>
+                    </div>
+                </section>
+
+
+            </div>
+        </div>
     </main>
     <!--FOOTER-->
     <footer class="footerstyling u-margin-top">
@@ -232,7 +236,8 @@
     </template>
 
     <template class="t-category-box">
-        <section class="category-box u-margin-top">
+        <img src="" alt="" class="category-box__image flytmigbund halv-om-halv1">
+        <section class="category-box category-box_width box-size middle halv-om-halv2">
             <h1 class="category-box__title">Beskrivelse</h1>
             <p class="category-box__description"></p>
         </section>
@@ -420,6 +425,8 @@
 
             const categoryBoxClone = categoryBoxTemplate.content.cloneNode(true);
 
+            categoryBoxClone.querySelector(".category-box__image").src = findCategory.splash_image.guid;
+
             categoryBoxClone.querySelector(".category-box__title").textContent = findCategory.name;
 
             categoryBoxClone.querySelector(".category-box__description").textContent = findCategory.description;
@@ -450,5 +457,8 @@
             // FB Website url tag
             document.querySelector("meta[property='og:url']").setAttribute("content", window.location.href);
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
