category box tilpasning

--- a/alle-produkter.html
+++ b/alle-produkter.html
@@ -89,6 +89,7 @@
             <div class="vertical-menu-mover">
                 <section class="container category-slider u-margin-bottom">
                     <div class="category-list-container">
+                        <h2 class="category-title">Produktkategorier</h2>
                         <ul class="category-list">
 
                             <li class="category-list__item">
