styling af grid og kategorikassen

--- a/alle-produkter.html
+++ b/alle-produkter.html
@@ -84,10 +84,10 @@
     <main class="u-margin-bottom">
         <div class="about_content">
 
-            <section class=" js-category-box category-box-red u-margin-bottom"></section>
+            <section class=" js-category-box category-box-red u-margin-bottom-webshop"></section>
 
             <div class="vertical-menu-mover">
-                <section class="container category-slider u-margin-bottom">
+                <section class="container category-slider u-margin-bottom-webshop">
                     <div class="category-list-container">
 
                         <div class="filter-mobile-button cta-primary">
@@ -544,8 +544,5 @@
 
             }
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
