container og småting

--- a/alle-produkter.html
+++ b/alle-produkter.html
@@ -36,7 +36,7 @@
 
 <body>
     <header>
-        <div class="header_menu_width container">
+        <div class="header_menu_width container-webshop">
 
             <div class="css_header_mobile">
                 <div class="css_header_burger_icon js_header_burger_icon">
@@ -87,7 +87,7 @@
             <section class=" js-category-box category-box-red u-margin-bottom-webshop"></section>
 
             <div class="vertical-menu-mover">
-                <section class="container category-slider u-margin-bottom-webshop">
+                <section class="container-webshop category-slider u-margin-bottom-webshop">
                     <div class="category-list-container">
 
                         <div class="filter-mobile-button cta-primary">
@@ -172,7 +172,7 @@
                     </div>
                 </section>
 
-                <section class="container products u-margin-bottom">
+                <section class="container-webshop products u-margin-bottom">
                     <div class="container_products">
                         <div class="product-list js-product-list"></div>
                     </div>
@@ -185,7 +185,7 @@
     <footer class="footerstyling u-margin-top">
         <!--FOOTER COLUMN WRAPPER-->
 
-        <div class="footerinfo container">
+        <div class="footerinfo container-webshop">
             <!--FOOTER COLUMN-->
             <div class="footercolumn">
                 <h3 class="footer_title">Kontakt HAULI</h3>
